# DGQ

./: .gitignore  README.md  build_cutlass.sh  environment.sh  llama.sh  llama7b.sh  pyproject.toml
dgq/kernels/: linear.cu  setup.py
dgq/models/: bmm.py  linear.py
dgq/test/: test_linear_kernels.py
dgq/utils/: datautils.py
